2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/configure.in: Set CC and CFLAGS when
	compiling with VC++. Call AC_CANONICAL_HOST.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/configure.in: Set the c preprocessor and
	executable extensions to work around problems
	that autoconf 2.13 has with VC++.

2003-02-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in:
	* win/Makefile.in: Install http2.0 not http2.3
	directory since http2.3 does not exist.

2003-02-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure:
	* win/configure: Regen to fix problem with timestamps
	after import from sources.

2002-12-19  Christopher Faylor  <cgf@redhat.com>

	* win/tclWinInit.c (TclpInitLibraryPath): Default to correct location
	for installLib on cygwin.

2002-12-19  Christopher Faylor  <cgf@redhat.com>

	* cygwin/configure.in: Set TCL_BUILD_LIB_SPEC.
	* cygwin/configure: Regenerate.

2002-10-05  Christopher Faylor  <cgf@redhat.com>

	* win/tclWin32Dll.c (tclWinTCharEncoding): Remove 'static' since it is
	declared in header as exportable extern.

2002-09-13  Keith Seitz  <keiths@redhat.com>

	From Mo Dejong  <supermo@bayarea.net>:
	* win/tclWin32Dll.c (DllMain): Remove unused os
	variable since VC++ treats warnings as errors
	when compiling with symbols.

	* win/tclWinPort.h: Remove undefine of PASCAL
	symbol added on 2001-09-12. It caused
	crashing problems with sockets.

2002-07-31  Keith Seitz  <keiths@redhat.com>

	* generic/tclIntDecls.h (TclIntStubs): Do not include definitions
	for tclpAlloc, tclpFree, or pRealloc on cygwin.

	* win/tcl.hpj.in: Copied here from tools/tcl.hpj.in.
	
	* win/tcl.m4 (SC_CONFIG_CFLAGS): Add TCL_DLL_BASE, DDE_DLL_BASE,
	and REG_DLL_BASE variables to define DLL image bases on cygwin.
	Do not link with "-e _WinMain@16" on cygwin.
	* win/configure.in (TCL_DLL_BASE): Substitute into makefile.
	(DDE_DLL_BASE): Likewise.